text align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ button {
     width: 90%;
     height: auto;
     font-size: 12px;
-    text-align: right;
+    text-align: left;
     padding: 10px;
     margin: 5px;
     overflow: hidden;
@@ -240,7 +240,7 @@ button {
     width: 95%;
     padding-right: 5%;
     padding: 2px 0px;
-    text-align: center;
+    text-align: left;
     /* box-shadow: 1px 1px 2px var(--dark-blue); */
  }
 
@@ -248,8 +248,8 @@ button {
      margin-bottom:2px;
      height: 20px;
      width:100%;
-     text-align: center;
-     float:right;
+     text-align: left;
+     float:left;
  }
 
  .username {
